[tool.poetry]
name = "sencore"
version = "0.1.4"
description = "sentence nlp parser for multilingua"
authors = ["Phoenix Grey <phoenix.grey0108@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
spacy = "^2.2.3"
click = "^7.1.1"
phrase-recognizer = "^0.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
parse_to_vocab = "sencore.entry:vocab" 
parse_to_phrase = "sencore.entry:phrase"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[[tool.poetry.source]]
name = "test"
url = "https://test.pypi.org/simple/"
secondary = true


