[tool.poetry]
name = "sencore"
version = "0.1.45"
description = "sentence nlp parser for multilingua"
authors = ["Phoenix Grey <phoenix.grey0108@gmail.com>"]
repository = "https://github.com/qishe-nlp/sencore"
documentation = "https://qishe-nlp.github.io/sencore/"
readme = "README.md"
keywords = ["NLP", "sentence parsing", "spacy"]

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.0.3"
spacy = "3.7.5"
phrase-detective = "0.1.35"
kg-detective = "0.1.18"
structure-detective = "0.1.9"
deepl = "1.20.0"
numpy = "1.26.4"
transformers = "4.47.1"

[tool.poetry.dev-dependencies]
pytest = "^8.1"
Sphinx = "^8.1.3"
sphinx-rtd-theme = "^3.0.2"
sphinxcontrib-jquery = "^4.1"

[tool.poetry.scripts]
parse2vocab = "sencore.entry:vocab" 
parse2phrase = "sencore.entry:phrase"
parse2structure = "sencore.entry:structure" 
parse2kg = "sencore.entry:kg"

model_parse2phrase = "sencore.entry:model_phrase"

vocab_parsed = "sencore._usage:generate_vocab_parsed"
phrase_parsed = "sencore._usage:generate_phrase_parsed"
kg_parsed = "sencore._usage:generate_kg_parsed"

merge_csv = "sencore._usage:merge_csv"

prodigy_phrase = "sencore.train:generate_prodigy_phrases"
prodigy_structure = "sencore.train:generate_prodigy_structures"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.masonry.api"

